tests/ui/coercion/coerce-box-new-to-unboxed.rs
fn main() {
    let _: String = Box::new(String::new());
    //~^ ERROR mismatched types
}
